<resources>
    <string name="app_name">NotYourFaultKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 리사이클러뷰  -->
    <string name="rcv_name">쉼터명&#160;:&#160;</string>
    <string name="rcv_target">입소대상&#160;:&#160;</string>
    <string name="rcv_num">정원수&#160;:&#160;</string>
    <string name="rcv_tel">전화번호&#160;:&#160;</string>
    <string name="rcv_faxTel">팩스번호&#160;:&#160;</string>
    <string name="rcv_addr">주소&#160;:&#160;</string>
    <string name="rcv_limitDay">입소기간제한&#160;:&#160;</string>
    <string name="tv_openMode">운영형태&#160;:&#160;</string>
    <string name="tv_hmpg">홈페이지&#160;주소&#160;:&#160;</string>
    <string name="tv_subNm">인근지하철명&#160;:&#160;</string>
    <string name="tv_busNm">인근버스정류장명&#160;:&#160;</string>

</resources>