<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#D6D6D6"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:padding="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/rcv_name"/>

            <TextView
                android:id="@+id/fcltNm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="어쩌구"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rcv_limitDay"/>

            <TextView
                android:id="@+id/etrPrdCn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="입소 기간 제한: 몇개월 어쩌구"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rcv_target"
                />
            <TextView
                android:id="@+id/etrTrgtCn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="남자"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rcv_num"
                />

            <TextView
                android:id="@+id/cpctCnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="100"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rcv_tel"
                />

            <TextView
                android:id="@+id/rprsTelno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="032-551-7188"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rcv_faxTel" />

            <TextView
                android:id="@+id/fxno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="070-0060606"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rcv_addr" />

            <TextView
                android:id="@+id/lotnoAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="ㅇㅁㄴㅁㅇㄴㅁㅇㅁㅇㅁㄴㅇㄴㅁㅇ" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>